<resources>
    <string name="app_name">JobApplication</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_don_t_have_an_account">Don\'t have an account</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_please_sign_in_to_continue">Please sign in to continue</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_create_account">Create account</string>
    <string name="lbl_mobile_number">Mobile number</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_already_have_an_account">Already have an account</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_results">Results</string>
    <string name="lbl_sarkari_results">Sarkari Results</string>
    <string name="lbl_employment_news">Employment news</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="lbl_about_us">About us</string>
    <string name="lbl_gujarat">Gujarat</string>
    <string name="lbl_rajasthan">Rajasthan</string>
    <string name="lbl_central_government">Central Government</string>
    <string name="lbl_pharmacist">Pharmacist</string>
    <string name="lbl_ahmedabad_satellite_bangalore_residency_road_mumbai_borivali_east">Ahmedabad(Satellite ), Bangalore(Residency Road ), Mumbai(Borivali East )</string>
    <string name="lbl_m_pharm_b_pharm">M.Pharm, B.Pharm</string>
    <string name="lbl_15000_25000_monthly">15000 - 25000 Monthly</string>
    <string name="lbl_last_date_14_aug_2021">Last Date : 14 Aug 2021</string>
    <string name="lbl_medipharma_konnect_job_details">Medipharma Konnect - Job Details</string>
    <string name="lbl_knowledge_about_medicines">knowledge about medicines</string>
    <string name="lbl_reading_prescriptions_handwriting_is_often_difficult_to_read">reading prescriptions (handwriting is often difficult to read)</string>
    <string name="lbl_be_able_to_suggest_medicines_for_basic_ailments">be able to suggest medicines for basic ailments</string>
    <string name="lbl_suggest_alternate_medicines_if_one_brand_is_not_available">suggest alternate medicines if one brand is not available</string>
    <string name="lbl_be_good_at_filing_and_using_computers">be good at filing and using computers</string>
    <string name="lbl_manage_invoicing_and_billing">manage invoicing and billing</string>
    <string name="lbl_job_summary">Job Summary</string>
    <string name="lbl_job_type_full_time">Job Type : Full Time</string>
    <string name="lbl_job_role_pharmacist_medical_rep">Job Role : Pharmacist / Medical Rep</string>
    <string name="lbl_job_category_pharma">Job Category : Pharma</string>
    <string name="lbl_hiring_process_face_to_face_interview_telephonic_interview">Hiring Process : Face to Face Interview, Telephonic Interview</string>
    <string name="lbl_who_can_apply_freshers">Who can apply : Freshers</string>
    <string name="lbl_apply_now">Apply Now</string>
    <string name="lbl_mobihealth_fluvina_technologies_private_limited">MobiHealth Fluvina Technologies Private Limited</string>
    <string name="lbl_medipharma_konnect">Medipharma Konnect</string>
    <string name="lbl_mobile_appdevelopment">Mobile AppDevelopment</string>
    <string name="lbl_ahmedabad">Ahmedabad</string>
    <string name="lbl_me_m_tech_other_course_mca_be_b_tech">ME/M.Tech, Other Course, MCA, BE/B.Tech</string>
    <string name="lbl_last_date_09_jul_2021">Last Date: 09 Jul 2021</string>
    <string name="lbl_mobihealth_fluvina_technologies_private_limited_job_details">MobiHealth Fluvina Technologies Private Limited - Job Details</string>
    <string name="lbl_working_on_native_android_app_development">Working on native Android app development</string>
    <string name="lbl_using_git_and_solving_the_problem_defined">Using Git and solving the problem defined</string>
    <string name="lbl_using_and_updating_jira_regularly">Using and updating JIRA regularly</string>
    <string name="lbl_communicating_with_the_team">Communicating with the team</string>
    <string name="lbl_understanding_the_requirements_and_creating_documents">Understanding the requirements and creating documents</string>
    <string name="lbl_skill_s_required_ionic_react_native_android_reactjs">Skill(s) required : Ionic,React Native,Android,ReactJS</string>
    <string name="lbl_job_type_internship_projects">Job Type : Internship / Projects</string>
    <string name="lbl_job_role_it_mobile_developer">Job Role : IT - Mobile Developer</string>
    <string name="lbl_job_category_it_software">Job Category : IT/Software</string>
    <string name="lbl_sakir_corporation">Sakir corporation</string>
    <string name="lbl_marketing_executive">Marketing Executive</string>
    <string name="lbl_ahmedabad_paldi">Ahmedabad(Paldi )</string>
    <string name="lbl_12th_pass_hse_any_graduate">12th Pass (HSE), Any Graduate</string>
    <string name="lbl_last_date_21_aug_2021">Last Date : 21 Aug 2021</string>
    <string name="lbl_sakir_corporation_job_details">Sakir corporation - Job Details</string>
    <string name="lbl_dear_candidates_we_are_hiring_fresher_and_experienced_candidates_basic_computer_knowledge_is_compulsory_12th_pass_and_a_graduate_person_can_also_apply_no_target_no_pressure">Dear candidates. We are hiring Fresher and Experienced candidates. Basic computer knowledge is compulsory. 12th pass and a Graduate person can also apply. No Target No Pressure.</string>
    <string name="lbl_job_category_others">Job Category : Others</string>
    <string name="lbl_hiring_process_face_to_face_interview">Hiring Process : Face to Face Interview</string>
    <string name="lbl_balaji_enterprise">Balaji Enterprise</string>
    <string name="lbl_any_graduate_other_course">Any Graduate, Other Course</string>
    <string name="lbl_8000_10000_monthly">8000 - 10000 Monthly</string>
    <string name="lbl_balaji_enterprise_job_details">Balaji Enterprise - Job Details</string>
    <string name="lbl_over_the_years_balaji_has_firmly_established_the_image_of_one_of_the_most_reliable_offering_timely_delivery_great_range_and_best_quality_products_of_hologram_provider_we_are_a_team_of_dedicated_hardworking_and_motivated_professionals_who_always_have_the_quest_to_deliver_the_best_and_latest_to_our_customers_about_part_time_job_internship_selected_intern_s_day_to_day_responsibilities_include">Over the years Balaji has firmly established the image of one of the most reliable, offering timely delivery, great range and best quality products of hologram provider. We are a team of dedicated, hardworking and motivated professionals who always have the quest to deliver the best and latest to our customers. About part time job/internship Selected intern\'s day-to-day responsibilities include:</string>
    <string name="lbl_work_with_your_team_to_develop_digital_marketing_strategies">Work with your team to develop digital marketing strategies</string>
    <string name="lbl_write_marketing_content_for_various_online_marketing_media_channels">Write marketing content for various online marketing media channels</string>
    <string name="lbl_learn_and_apply_seo_best_practices">Learn and apply SEO best practices</string>
    <string name="lbl_analyze_reports_to_create_insights_that_will_help_drive_digital_marketing_content_strategies">Analyze reports to create insights that will help drive digital marketing content strategies</string>
    <string name="lbl_content_creation_for_website_marketing">Content creation for WebSite marketing .</string>
    <string name="lbl_feardog_music">Feardog Music</string>
    <string name="lbl_mobile_app_development">Mobile App Development</string>
    <string name="lbl_8000_12000_monthly">8000 - 12000 Monthly</string>
    <string name="lbl_last_date_18_jul_2021">Last Date : 18 Jul 2021</string>
    <string name="lbl_feardog_music_job_details">Feardog Music - Job Details</string>
    <string name="lbl_feardog_is_a_record_label_company_where_a_creative_group_of_people_compose_lo_fi_music_for_listeners_we_have_the_vision_to_connect_to_listeners_all_around_the_world_through_our_music_about_the_internship_selected_intern_s_day_to_day_responsibilities_include">Feardog is a record label company, where a creative group of people compose lo-fi music for listeners. We have the vision to connect to listeners all around the world through our music.About the internship Selected intern\'s day-to-day responsibilities include:</string>
    <string name="lbl_designing_developing_and_maintaining_the_ios_app">Designing, developing and maintaining the iOS app</string>
    <string name="lbl_working_from_design_to_back_end_development">Working from design to back-end development</string>
    <string name="lbl_creating_and_maintaining_a_robust_framework_to_support_the_apps">Creating and maintaining a robust framework to support the apps</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_result">Result</string>
    <string name="lbl_view_result">View Result</string>
    <string name="lbl_leave_a_message">Leave a message</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_7976664814">7976664814</string>
    <string name="lbl_call_now">Call Now</string>
    <string name="lbl_info_waytocode_in">info@waytocode.in</string>
    <string name="lbl_email_now">Email now</string>
    <string name="lbl_please_enter_your_email_address">Please enter your email address</string>
    <string name="lbl_to_reset_your_password">to reset your password</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_way_to_job_find_latest_sarkari_jobs_for_freshers_experienced_graduates_across_india_and_get_free_naukri_job_alerts_on_recent_and_upcoming_sarkari_jobs_vacancies_through_way_to_job_as_a_jobs_source_we_provides_present_and_latest_recruitment_details_for_all_government_sarkari_naukri_across_india_here_in_sarkari_naukri_section_jobseekers_can_search_and_apply_online_for_various_jobs_and_information_like_psu_psc_ssc_army_navy_railway_etc_we_also_list_all_the_todays_sarkari_jobs_central_and_state_government_jobs_public_sectors_jobs_latest_bank_jobs_defence_jobs_diploma_sarkari_naukri_across_india">Way To Job:Find latest Sarkari Jobs for freshers experienced graduates across India and get free Naukri/Job alerts on recent and upcoming Sarkari jobs vacancies through Way To Job, as a jobs source we provides present and latest recruitment details for all Government/Sarkari Naukri across India. Here in Sarkari Naukri section jobseekers can search and apply online for various jobs and information like PSU, PSC, SSC, Army, Navy, Railway etc. We also list all the Todays Sarkari Jobs , central and state government jobs, Public sectors jobs, latest Bank jobs, Defence Jobs, Diploma Sarkari naukri across India.</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_fgot_password">Forgot Password</string>
</resources>