<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_background"
    tools:context=".fragment.FeedbackFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_100dp"
                android:text="@string/lbl_feedback"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_30sp"
                android:fontFamily="@font/montserratalternates_bold"
                android:gravity="center"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_30dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtemailf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_email_address"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_18sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:padding="@dimen/dimen_10dp"
                    android:background="@drawable/box_background"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="36"
                    android:maxLines="1"
                    android:minLines="1" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtnamef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_name"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_18sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:padding="@dimen/dimen_10dp"
                    android:background="@drawable/box_background"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minLines="1" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtmsg"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_200dp"
                    android:hint="@string/lbl_leave_a_message"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:gravity="start"
                    android:textSize="@dimen/dimen_18sp"
                    android:maxLines="5"
                    android:minLines="1"
                    android:inputType="text"
                    android:fontFamily="@font/montserrat_bold"
                    android:padding="@dimen/dimen_10dp"
                    android:background="@drawable/box_background"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:imeOptions="actionDone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_submit"
                    android:id="@+id/btnsubmit"
                    android:layout_marginTop="@dimen/dimen_40dp"
                    android:textColor="@color/darkcolor"
                    android:textAllCaps="false"
                    android:fontFamily="@font/montserratalternates_bold"
                    android:textSize="@dimen/dimen_18sp"
                    android:background="@drawable/edittext_background"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>